appId: com.courtchamp
onFlowStart:
  - runFlow: ../login.yaml
---
- tapOn:
    id: "maestro-seed-home-court-flow-set"
- extendedWaitUntil:
    visible: "Seeded"
    timeout: 60000
- tapOn: "OK"
- tapOn:
    id: "tab-competitions"
- runFlow:
    when:
      notVisible:
        id: "competitions-notifications-button"
    commands:
      - tapOn:
          id: "tab-competitions"
- tapOn:
    id: "competitions-notifications-button"
- extendedWaitUntil:
    visible: ".*open Maestro Home Court Ladder on Matchmaking.*"
    timeout: 15000
- tapOn: ".*open Maestro Home Court Ladder on Matchmaking.*"
- extendedWaitUntil:
    visible:
      id: "matchmaking-post-match"
    timeout: 20000
- tapOn:
    id: "matchmaking-post-match"
- extendedWaitUntil:
    visible:
      id: "add-ladder-match-court-selector"
    timeout: 10000
- assertNotVisible:
    id: "home-court-required-modal"
- tapOn:
    id: "add-ladder-match-court-selector"
- extendedWaitUntil:
    visible: ".*Maestro Court B Verified.*"
    timeout: 15000
- tapOn:
    id: "search-court-add"
- extendedWaitUntil:
    visible:
      id: "add-court-name-input"
    timeout: 10000
- tapOn:
    id: "add-court-name-input"
- inputText: "Maestro Court New Submission"
- pressKey: Enter
- tapOn:
    id: "add-court-country-city-button"
- tapOn:
    id: "country-search-input"
- inputText: "United Kingdom"
- pressKey: Enter
- tapOn:
    id: "country-option-GB"
- tapOn:
    id: "city-search-input"
- inputText: "London"
- pressKey: Enter
- tapOn:
    id: "city-option-London"
- tapOn:
    id: "add-court-postcode-input"
- inputText: "E1 1AA"
- pressKey: Enter
- tapOn:
    id: "add-court-address-input"
- inputText: "2 Maestro Street"
- pressKey: Enter
- tapOn:
    id: "add-court-submit"
- extendedWaitUntil:
    visible: "Court sent for approval. You'll be notified once it's verified."
    timeout: 15000
- extendedWaitUntil:
    visible: ".*Maestro Court New Submission.*Awaiting Verification.*"
    timeout: 15000
- tapOn: ".*Maestro Court New Submission.*Awaiting Verification.*"
- assertVisible:
    id: "search-court-add"
- tapOn:
    id: "search-court-close"
- assertVisible: ".*Select Court.*"
- assertNotVisible:
    id: "add-ladder-match-court-pending"
- tapOn: "Cancel"
- tapOn:
    id: "tab-home"
- tapOn:
    id: "maestro-mock-approve-new-submission"
- extendedWaitUntil:
    visible: "Mocked"
    timeout: 30000
- tapOn: "OK"
- tapOn:
    id: "tab-competitions"
- runFlow:
    when:
      notVisible:
        id: "competitions-notifications-button"
    commands:
      - tapOn:
          id: "tab-competitions"
- tapOn:
    id: "competitions-notifications-button"
- extendedWaitUntil:
    visible: ".*Maestro Court New Submission has been approved. You can now select it in Maestro Home Court Ladder..*"
    timeout: 15000
- tapOn: ".*Maestro Court New Submission has been approved.*"
- extendedWaitUntil:
    visible:
      id: "matchmaking-post-match"
    timeout: 20000
- assertVisible:
    id: "ladder-matchmaking"
- tapOn:
    id: "matchmaking-post-match"
- extendedWaitUntil:
    visible:
      id: "add-ladder-match-court-selector"
    timeout: 10000
- tapOn:
    id: "add-ladder-match-court-selector"
- extendedWaitUntil:
    visible: ".*Maestro Court New Submission.*"
    timeout: 15000
- assertNotVisible: ".*Maestro Court New Submission.*Awaiting Verification.*"
- tapOn: ".*Maestro Court New Submission.*"
- extendedWaitUntil:
    visible: ".*Maestro Court New Submission.*"
    timeout: 10000
- assertNotVisible: ".*Select Court.*"
- assertNotVisible:
    id: "add-ladder-match-court-pending"
